--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,7 +4,7 @@
 @import "compass/css3";
 .large-banner {
   figure {
-    height: 650px;
+    height: 550px;
     margin-top: -15px;
     overflow: hidden;
     position: relative;
@@ -30,8 +30,8 @@
 .home {
   .header-content {
     position: relative;
-    bottom: 635px;
-    margin-bottom: -580px;
+    bottom: 545px;
+    margin-bottom: -470px;
 
     input {
       height: 50px;
