--- a/app/assets/stylesheets/reviews.css.scss
+++ b/app/assets/stylesheets/reviews.css.scss
@@ -166,6 +166,7 @@
     }
     p {
       font-size: 18px;
+      margin-bottom: 30px;
       img {
         width: 100%;
       }
